# phishing-detection-system

./: .gitignore  LICENSE  Notes.txt  README.md  app.py  main.py  push_data.py  pyproject.toml  setup.py  test_mongodb.py
final_model/: model.pkl  preprocessor.pkl
mlruns/0/: meta.yaml
mlruns/0/345e4ffd08ec4438a8dea9a2c60a3c24/: meta.yaml
mlruns/0/345e4ffd08ec4438a8dea9a2c60a3c24/metrics/: f1_score  precision  recall_score
mlruns/0/345e4ffd08ec4438a8dea9a2c60a3c24/outputs/m-962c6b9622174acf827598cd0d47df94/: meta.yaml
mlruns/0/345e4ffd08ec4438a8dea9a2c60a3c24/tags/: mlflow.runName
mlruns/0/acb14165fa4f4978881bdba12fc3f92b/: meta.yaml
mlruns/0/acb14165fa4f4978881bdba12fc3f92b/metrics/: f1_score  precision  recall_score
mlruns/0/acb14165fa4f4978881bdba12fc3f92b/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/0/models/m-579295935e514b6aadf23a479ecc5ed9/: meta.yaml
mlruns/0/models/m-962c6b9622174acf827598cd0d47df94/: meta.yaml
networksecurity/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/constant/training_pipeline/: __init__.py
networksecurity/entity/: artifact_entity.py  config_entity.py
networksecurity/exception/: exception.py
networksecurity/logging/: logger.py
networksecurity/pipeline/: training_pipeline.py
networksecurity/utils/main_utils/: utils.py
networksecurity/utils/ml_utils/metric/: classification_metric.py
networksecurity/utils/ml_utils/model/: estimator.py
static/css/: styles.css
static/js/: main.js
templates/: base.html  index.html  table.html
(+7 files in other folders)
